k8s/matrix-dendrite/delegation-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: delegation-nginx
  name: delegation-service
  namespace: matrix-dendrite
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: delegation-nginx
  type: ClusterIP
